--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,11 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        //16
+        minSdkVersion = 21
         compileSdkVersion = 28
         targetSdkVersion = 28
+        //multiDexEnabled = true
     }
     repositories {
         google()
@@ -13,6 +15,8 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
+        classpath 'com.google.gms:google-services:4.3.3'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
