--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.9",
+    "react-navigation-stack": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
