--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mem": "^6.0.1",
     "minimist": "^1.2.5",
     "react": "16.9.0",
+    "react-firebase-hooks": "^2.1.1",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
